fix: resolved animation scale on mobile view

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,17 +1,18 @@
 @import '@workspace/ui/globals.css';
 
+
 .svg {
     width: 100%;
     height: 100%;
-    transform: none !important;
 }
 
 .rec-one {
     visibility: hidden;
-    filter: drop-shadow(0px 10px 22px rgba(179, 212, 255, 0.10));
-    /*drop-shadow(0px 39px 39px rgba(179, 212, 255, 0.09))*/
-    /*drop-shadow(0px 88px 53px rgba(179, 212, 255, 0.05))*/
-    /*drop-shadow(0px 157px 63px rgba(179, 212, 255, 0.02));*/
+    filter: drop-shadow(0px 17px 5px var(--muted));
+}
+
+#leave-svg {
+    @apply translate-x-[-10px] sm:translate-x-[-150px] lg:translate-x-[-170px];
 }
 
 .stepper-track {
